frontend of account, registrations/new and registrations/edit pages is updated

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
@@ -11,7 +11,6 @@
         <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
       <% end %>
 
-<<<<<<< HEAD
     <%= f.input :first_name,
                 required: true,
                 input_html: { autocomplete: "first-name" } %>
@@ -30,33 +29,13 @@
                 required: true,
                 input_html: { autocomplete: "current-password" } %>
   </div>
-=======
-      <%= f.input :password,
-                  hint: "leave it blank if you don't want to change it",
-                  required: false,
-                  input_html: { autocomplete: "new-password" } %>
-      <%= f.input :password_confirmation,
-                  required: false,
-                  input_html: { autocomplete: "new-password" } %>
-      <%= f.input :current_password,
-                  hint: "we need your current password to confirm your changes",
-                  required: true,
-                  input_html: { autocomplete: "current-password" } %>
-    </div>
->>>>>>> master
 
     <div class="form-actions">
       <%= f.button :submit, "Update", class: 'btn btn-primary' %>
     </div>
   <% end %>
 
-<<<<<<< HEAD
-<div><%= button_to "Delete My Account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
-=======
-  <h3>Cancel my account</h3>
+  <div class="mt-3"><%= link_to "Back", :back, class: 'btn btn-primary' %></div>
 
-  <div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
->>>>>>> master
-
-  <%= link_to "Back", :back %>
+  <div class="mt-3"><%= button_to "Delete My Account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete, class: 'btn btn-primary' %></div>
 </div>
