--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,20 @@
-<div class="container">
+<div class="container-fluid">
   <h2>Sign up</h2>
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= f.error_notification %>
 
-<<<<<<< HEAD
-  <div class="form-inputs">
-    <%= f.input :first_name,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "first-name" } %>
-    <%= f.input :last_name,
-                required: true,
-                input_html: { autocomplete: "last-name" } %>
-    <%= f.input :email,
-                required: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
-  </div>
-=======
     <div class="form-inputs">
-      <%= f.input :email,
+      <%= f.input :first_name,
                   required: true,
                   autofocus: true,
+                  input_html: { autocomplete: "first-name" }%>
+      <%= f.input :last_name,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "last-name" }%>
+      <%= f.input :email,
+                  required: true,
                   input_html: { autocomplete: "email" }%>
       <%= f.input :password,
                   required: true,
@@ -38,13 +24,13 @@
                   required: true,
                   input_html: { autocomplete: "new-password" } %>
     </div>
->>>>>>> master
 
     <div class="form-actions">
       <%= f.button :submit, "Sign up", class: 'btn btn-primary' %>
     </div>
   <% end %>
-
-  <%= render "devise/shared/links" %>
+  <div class="mt-3">
+    <%= render "devise/shared/links" %>
+  </div>
 
 </div>
