--- a/app/views/pages/account.html.erb
+++ b/app/views/pages/account.html.erb
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container-fluid">
   <h2>My Account</h2>
   <p>First Name: <%= @user.first_name %></p>
   <p>Last Name: <%= @user.last_name %></p>
   <p>Email: <%= @user.email %></p>
-  <%= link_to 'Edit Account Info', edit_user_registration_path %>
+  <%= link_to 'Edit Account Info', edit_user_registration_path, class: 'btn btn-primary' %>
 </div>
