Ticket statistics fixed

--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -24,7 +24,7 @@
     </thead>
 
   <tbody>
-    <% tickets.each do |ticket| %>
+    <% @tickets.each do |ticket| %>
         <tr>
             <td><%= ticket.ticket_id %></td>
             <td><%= ticket.subject %></td>
