--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,6 +8,35 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
+    <ul class="nav justify-content-center">
+     <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+      <li class="nav-item">
+       <a class="nav-link active" aria-current="page" href="#">Products</a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="#">Pricing</a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link" href="#">Solution</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Demo</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Resources</a>
+      </li>
+    </ul>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
