--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,10 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+
+$white: #fcfcfc;
+$verydarkblue: #0f1940;
+$darkblue: #282378;
+$lightblue: #412db0;
+$verylightblue: #5a37e9
