--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,6 @@
-
 <div class="container">
-  </div class="row justify-content-center">
-    <div class="col-lg-4">
-      <div id="sign-up" class="card p-4 rounded-5 bg-light">
+  </div class="row">
+    <div class="col-xs-12 col-sm-4 col-sm-offset-4">
         <h2>Sign up</h2>
 
         <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -35,7 +33,6 @@
         <% end %>
         <div class="mt-3">
           <%= render "devise/shared/links" %>
-      </div>
       </div>
     </div>
   </div>
