--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,37 +1,55 @@
 <div class="container">
-<h1>Dashboard</h1>
 
-<h2>Ticket statistics</h2>
-<div class="open-tickets">
-  <strong>Open Tickets:</strong> <%= Ticket.open_count %>
+<div class="d-flex justify-content-center mt-3">
+  <h1>Dashboard</h1>
+</div>
+ <div class="d-flex justify-content-center">
+ <div class="mx-3 p-3 border rounded shadow-sm">
+   <div class="open-tickets">
+      <strong>Open Tickets:</strong> <%= Ticket.open_count %>
+    </div>
+ </div>
+ <div class="mx-3 p-3 border rounded shadow-sm">
+    <div class="closed-tickets">
+      <strong>Closed Tickets:</strong> <%= Ticket.closed_count %>
+    </div>
+ </div>
 </div>
 
-<div class="closed-tickets">
-  <strong>Closed Tickets:</strong> <%= Ticket.closed_count %>
+
+<div class="d-flex flex-column justify-content-center my-3">
+  <h3> My Tickets</h3>
+  <p>Welcome back <%= @current_user.first_name %>!</p>
 </div>
 
-<h3> My Tickets</h3>
 
-<table>
+<table class="table">
     <thead>
       <tr>
-        <th>Ticket ID</th>
-        <th>Subject</th>
-        <th>Requester</th>
-        <th>Updated</th>
-        <th>Group</th>
-        <th>Assignee</th>
+        <th scope="col">Ticket ID</th>
+        <th scope="col">Subject</th>
+        <th scope="col">Requester</th>
+        <th scope="col">Updated</th>
+        <th scope="col">Assignee</th>
+        <th scope="col"><i class="fa-solid fa-user-plus"></i></th>
       </tr>
     </thead>
 
   <tbody>
     <% @tickets.each do |ticket| %>
         <tr>
-            <td><%= ticket.id %></td>
-            <td><%= ticket.user %></td>
+          <th scope="row"><%= ticket.id %></th>
+            <td>Subject placeholder</td>
+            <td><%= ticket.client_email %></td>
             <td><%= ticket.updated_at %></td>
+            <% if ticket.assigned? %>
+              <td><%= ticket.user.first_name %></td>
+            <% else %>
+              <td>Unassigned</td>
+            <% end %>
+          <td><%= link_to "Assign to me", assign_ticket_path(ticket), class: "btn btn-primary text-light rounded shadow-sm" %></td>
         </tr>
-    <%end%>
+    <% end %>
   </tbody>
 </table>
 </div>
