--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -37,18 +37,18 @@
 
   <tbody>
     <% @tickets.each do |ticket| %>
-        <tr>
-          <th scope="row"><%= ticket.id %></th>
-            <td>Subject placeholder</td>
-            <td><%= ticket.client_email %></td>
-            <td><%= ticket.updated_at %></td>
-            <% if ticket.user.present? %>
-              <td><%= ticket.user.first_name.capitalize %> <%= ticket.user.last_name.capitalize %></td>
-            <% else %>
-              <td>Unassigned</td>
-            <% end %>
-          <td><%= link_to "Assign to me", assign_ticket_path(ticket), data: {turbo_method: :patch}, class: "btn btn-primary text-light rounded shadow-sm" %></td>
-        </tr>
+      <tr>
+        <th scope="row"><%= ticket.id %></th>
+          <td><%= ticket.subject %></td>
+          <td><%= ticket.client_email %></td>
+          <td><%= ticket.updated_at %></td>
+          <% if ticket.user.present? %>
+            <td><%= ticket.user.first_name.capitalize %> <%= ticket.user.last_name.capitalize %></td>
+          <% else %>
+            <td>Unassigned</td>
+          <% end %>
+        <td><%= link_to "Assign to me", assign_ticket_path(ticket), data: {turbo_method: :patch}, class: "btn btn-primary text-light rounded shadow-sm" %></td>
+      </tr>
     <% end %>
   </tbody>
 </table>
