Route and show view

--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -36,6 +36,7 @@
     </thead>
 
   <tbody>
+  <a href="">
     <% @tickets.each do |ticket| %>
         <tr>
           <th scope="row"><%= ticket.id %></th>
