--- a/app/views/pages/account.html.erb
+++ b/app/views/pages/account.html.erb
@@ -1,7 +1,19 @@
 <div class="container-fluid">
-  <h2>My Account</h2>
-  <p>First Name: <%= @user.first_name %></p>
-  <p>Last Name: <%= @user.last_name %></p>
-  <p>Email: <%= @user.email %></p>
-  <%= link_to 'Edit Account Info', edit_user_registration_path, class: 'btn btn-primary' %>
+  <div class="row justify-content-center">
+    <div class="col-xs-12 col-sm-4 ms-4 mt-4">
+        <div class="account-card">
+          <h2 class="mb-4">My Account</h2>
+          <div class="image">
+            <% unless @user.photo.key.nil? %>
+              <%= cl_image_tag @user.photo.key, height: 100, width: 100, crop: :fill%>
+            <% end %>
+          </div>
+          <p><strong>First Name: </strong><%= @user.first_name %></p>
+          <p><strong>Last Name: </strong><%= @user.last_name %></p>
+          <p><strong>Email: </strong><%= @user.email %></p>
+          <%= link_to 'Edit Account Info', edit_user_registration_path, class: 'btn btn-primary mt-3' %>
+        </div>
+
+    </div>
+  </div>
 </div>
