changes on home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -30,8 +30,9 @@
 </head>
 <body>
     <div class="content">
-        <h1>Seamless Support for Web3</h1>
-        <p>Our customer support app revolutionizes the decentralized web experience, offering real-time assistance, and proactive solutions to navigate the intricacies of Web 3 technologies.</p>
+      <h1>Seamless Support for Web3</h1>
+      <p>Our customer support app revolutionizes the decentralized web experience, offering real-time assistance, and proactive solutions to navigate the intricacies of Web 3 technologies.</p>
+      <%= link_to "An issue ? Create a ticket", new_ticket_path, class: "btn btn-primary text-light rounded shadow-sm" %></td>
     </div>
 </body>
 </html>
