--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -13,10 +13,10 @@
     <div class="flex">
       <button data-wallet-target="buttonClose" data-action="click->wallet#closeModal" class="btn-close">X</button>
     </div>
-    <button data-action="click->wallet#" class="btn">Metamask</button>
+    <button data-action="click->wallet#metamaskConnect" class="btn">Metamask</button>
     <button data-action="click->wallet#phantomConnect" class="btn">Phantom</button>
     <button data-action="click->wallet#walletConnect" class="btn">Wallet Connect</button>
-    <button data-action="click->wallet#" class="btn">Exodus</button>
+    <button data-action="click->wallet#exodusConnect" class="btn">Exodus (ALGO)</button>
   </section>
 
   <div data-wallet-target="overlay" data-action="click->wallet#closeModal" class="overlay hidden"></div>
