--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,13 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
-  <body><%= render "shared/navbar" %>
+  <body>
+  <div class="d-flex">
     <%= render "shared/flashes" %>
+    <%= render "shared/navbar" %>
     <div>
       <%= yield %>
     </div>
-    </div>
+  </div>
   </body>
 </html>
