--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -6,7 +6,7 @@
         <div class="search-form-control form-group">
           <input data-explorer-target="sourceInput" class="form-control string required" type="text" name="search[query]" id="search_query" />
           <div data-explorer-target="snackbar" id="snackbar"></div>
-          <button data-action="click->explorer#search" data-disable-with="processing" name="button" type="submit" class="btn btn-flat">
+          <button data-action="click->explorer#search" data-disable-with="processing" name="button" type="button" class="btn btn-flat">
             <i class="fas fa-search"></i> Search Hash
           </button>
         </div>
