--- a/app/assets/stylesheets/pages/_navbar.scss
+++ b/app/assets/stylesheets/pages/_navbar.scss
@@ -1,12 +1,63 @@
-.navbar-lewagon {
+.navbar {
+  background-color: $verylightblue;
+  color: $primary;
   justify-content: space-between;
-  background: white;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+  height: 70px;
+  margin-bottom: 0px;
 }
 
-.navbar-lewagon .navbar-collapse {
+@media (min-width: 500px) {
+  .toggleBtn {
+    display: flex;
+    align-items: center;
+  }
+}
+
+.nav-item .nav-link {
+  color: $white;
+}
+
+.navbar-nav .nav-link {
+  color: $white;
+  margin-right: 16px;
+}
+
+.navbar-nav .nav-link:hover {
+  color: $gray;
+}
+
+.navbar-toggler-icon {
+  color: $white;
+}
+
+.navbar-collapse {
   flex-grow: 0;
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+.logo-image {
+  width: 80px; /* Adjust the size as per your preference */
+  border-radius: 4px;
 }
+
+.navbar-lewagon {
+  justify-content: space-around;
+  background: white;
+}
+
+
+// .navbar-lewagon {
+//   justify-content: space-between;
+//   background: $verylightblue;
+//   color: $white;
+// }
+
+// .navbar-lewagon .navbar-collapse {
+//   flex-grow: 0;
+// }
+
+// .navbar-lewagon .navbar-brand img {
+//   width: 40px;
+//   height: 30px;
+//   border-radius: 3px;
+// }
