--- a/app/views/pages/account.html.erb
+++ b/app/views/pages/account.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row justify-content-center">
-    <div class="col-xs-12 col-sm-4 ms-4 mt-4">
+    <div class="col-xs-12 ms-4 mt-4">
         <div class="account-card">
           <h2 class="mb-4">My Account</h2>
           <div class="image">
