--- a/app/assets/stylesheets/components/_vertical_navbar.scss
+++ b/app/assets/stylesheets/components/_vertical_navbar.scss
@@ -1,7 +1,7 @@
 .vertical-navbar{
   justify-content: space-between;
   background: white;
-  height: 100vh;
+  height: 100vh !important;
   width: 100px;
   position: sticky;
   top: 0;
