footer for the home page

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -6,7 +6,6 @@ $blue: #0D6EFD;
 $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
-$gray: #0E0000;
 $light-gray: #F2F2F2;
 
 
@@ -14,4 +13,5 @@ $white: #fcfcfc;
 $verydarkblue: #0f1940;
 $darkblue: #282378;
 $lightblue: #412db0;
-$verylightblue: #5a37e9
+$verylightblue: #5a37e9;
+$gray: rgb(250, 246, 246);
