--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -34,5 +34,13 @@
       <p>Our customer support app revolutionizes the decentralized web experience, offering real-time assistance, and proactive solutions to navigate the intricacies of Web 3 technologies.</p>
       <%= link_to "An issue ? Create a ticket", new_ticket_path, class: "btn btn-primary text-light rounded shadow-sm" %></td>
     </div>
+      <div class="footer">
+      <div class="footer-links">
+      <a href="https://github.com/AngelLozan/crypto_zendesk" target=”_blank”><i class="fab fa-github"></i></a>
+      </div>
+      <div class="footer-copyright">
+        ChainCare is created with <i class="fas fa-heart"></i> by Tobi, Scott, Dorothy, Corentin, Elena
+      </div>
+    </div>
 </body>
 </html>
