--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -2,7 +2,7 @@
 
   <% if user_signed_in? %>
     <div class="my-3">
-      <%= simple_form_for :search, url: root_path, method: :get do |f| %>
+      <%= simple_form_for :search do |f| %>
         <div class="search-form-control form-group">
           <input data-explorer-target="sourceInput" class="form-control string required" type="text" name="search[query]" id="search_query" />
           <div data-explorer-target="snackbar" id="snackbar"></div>
