--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -2,15 +2,16 @@
 
   <% if user_signed_in? %>
     <div class="my-3">
-      <%= simple_form_for :search do |f| %>
-        <div class="search-form-control form-group">
-          <input data-explorer-target="sourceInput" class="form-control string required" type="text" name="search[query]" id="search_query" />
-          <div data-explorer-target="snackbar" id="snackbar"></div>
-          <button data-action="click->explorer#search" data-disable-with="processing" name="button" type="button" class="btn btn-flat">
-            <i class="fas fa-search"></i> Search Hash
-          </button>
-        </div>
-      <% end %>
+  <%= simple_form_for :search, data: { action: "click->explorer#search" } do |f| %>
+  <div class="search-form-control form-group">
+    <%= f.input :query, label: false, input_html: { data: { "explorer-target": "sourceInput"} }, class: "form-control" %>
+    <%# <div data-explorer-target="snackbar" id="snackbar"></div> %>
+    <%= f.button :button, type:"submit", class: "btn btn-flat" do %>
+      <i class="fas fa-search"></i>
+    <% end %>
+  </div>
+<% end %>
+
     </div>
   <% end %>
 
