--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,3 +5,11 @@
   padding-right: 30px;
   padding-bottom: 20px;
 }
+
+.home-container {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  color: $verydarkblue;
+}
