--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,3 +1,4 @@
+<% if home %>
 <div class="navbar navbar-expand">
   <div class="container-fluid">
     <%= link_to root_path, class: "navbar-brand" do %>
@@ -65,3 +66,4 @@
     </div>
   </div>
 </div>
+<% end %>
