Changes to show

--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -46,7 +46,7 @@
           <% else %>
             <td>Unassigned</td>
           <% end %>
-        <td><%= link_to "Assign to me", assign_ticket_path(ticket), data: {turbo_method: :patch}, class: "btn btn-primary text-light rounded shadow-sm" %></td>
+           <td onclick="event.stopPropagation()"><%= link_to "Assign to me" , assign_ticket_path(ticket),  class: "btn btn-primary text-light rounded shadow-sm"%></td>
       </tr>
     <% end %>
   </tbody>
