layout of pages with vertical navbar is fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,16 @@
 @import "components/index";
 @import "pages/index";
 @import "pages/navbar";
+
+.moved {
+  margin-left: 100px;
+
+}
+
+body {
+  color: $verydarkblue;
+}
+
+table {
+  color: $verydarkblue;
+}
