--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/vertical_navbar'%>
 
-<div class="container-fluid">
+<div class="container-fluid moved">
 
   <div class="d-flex justify-content-center">
     <h1>Dashboard</h1>
