--- a/app/assets/stylesheets/components/_vertical_navbar.scss
+++ b/app/assets/stylesheets/components/_vertical_navbar.scss
@@ -3,21 +3,14 @@
   background: white;
   height: 100vh !important;
   width: 100px;
-  position: sticky;
+  position: fixed;
   top: 0;
   .nav-link {
     padding-left: 0;
   }
+  margin-right: 20px;
 }
 
 .vertical-navbar .navbar-collapse {
   flex-grow: 0;
-}
-
-.vertical-navbar .navbar-brand img {
-  width: 40px;
-}
-
-.logo-image {
-  width: 40px;
 }
