--- a/app/views/pages/account.html.erb
+++ b/app/views/pages/account.html.erb
@@ -1,4 +1,6 @@
-<div class="container-fluid">
+<%= render 'shared/vertical_navbar'%>
+
+<div class="container-fluid moved">
   <div class="row justify-content-center">
     <div class="col-xs-12 ms-4 mt-4">
         <div class="account-card">
