--- a/app/views/shared/_vertical_navbar.html.erb
+++ b/app/views/shared/_vertical_navbar.html.erb
@@ -1,12 +1,11 @@
 <div class="navbar navbar-expand-sm navbar-light vertical-navbar">
-  <div class="container-fluid flex-column align-items-start justify-content-between h-100">
-    <%= link_to "#", class: "navbar-brand" do %>
-      <%= image_tag asset_path('logo.png'), class: "logo-image"%>
-    <% end %>
-
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <div class="container-fluid flex-column align-items-start justify-content-cenbetweenter h-100">
+    <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <% unless @current_user.photo.key.nil? %>
+        <%= cl_image_tag @current_user.photo.key, class: "avatar", alt: "dropdown menu", crop: :fill%>
+      <% end %>
+      <%# <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier",  %>
+    </a>
 
     <ul class="nav flex-column">
       <li class="nav-item active">
@@ -15,13 +14,8 @@
         <% end %>
       </li>
       <li class="nav-item active">
-        <%= link_to  account_path, class: "nav-link fs-1" do %>
-        <i class="fa-solid fa-user"></i>
-        <% end %>
-      </li>
-      <li class="nav-item active">
         <%= link_to  tickets_path, class: "nav-link fs-1" do %>
-        <i class="fa-brands fa-bitcoin"></i>
+        <i class="fa-brands fa-bitcoin fa-lg"></i>
         <% end %>
       </li>
       <li class="nav-item active">
@@ -30,26 +24,17 @@
         <% end %>
       </li>
       <li class="nav-item">
-        <a class="nav-link fs-1" href="#"><i class="fa-solid fa-gear"></i></a>
+       <%= link_to  account_path, class: "nav-link fs-1" do %>
+       <i class="fa-solid fa-gear"></i>
+       <% end %>
       </li>
     </ul>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto flex-column">
         <% if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Tickets", tickets_url, class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Account", account_path, class: "nav-link" %>
-          </li>
           <li class="nav-item dropdown">
-          <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
-          </a>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
-            </div>
+
           </li>
         <% else %>
           <li class="nav-item">
