table font and vertical navbar color were changed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,13 +14,16 @@
 
 .moved {
   margin-left: 100px;
-
 }
 
 body {
   color: $verydarkblue;
 }
 
-table {
-  color: $verydarkblue;
+tbody > * > * {
+  color: $verydarkblue !important;
+}
+
+.card-body {
+  color: $verydarkblue !important;
 }
