--- a/app/assets/stylesheets/components/_vertical_navbar.scss
+++ b/app/assets/stylesheets/components/_vertical_navbar.scss
@@ -1,6 +1,6 @@
 .vertical-navbar{
   justify-content: space-between;
-  background: white;
+  background-color: $verydarkblue;
   height: 100vh !important;
   width: 100px;
   position: fixed;
