--- a/app/views/shared/_vertical_navbar.html.erb
+++ b/app/views/shared/_vertical_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-light vertical-navbar">
+<div class="navbar-expand-sm navbar-light vertical-navbar">
   <div class="container-fluid flex-column align-items-start justify-content-cenbetweenter h-100">
     <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       <% unless @current_user.photo.key.nil? %>
