--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/vertical_navbar'%>
 
-<div class="container">
+<div class="container moved">
   <h1 class="my-4">Ticket Details</h1>
 
   <div class="card mb-3">
@@ -22,10 +22,10 @@
       <h5 class="card-title">Requester</h5>
       <p class="card-text"><%= @ticket.client_email %></p>
     </div>
-
-    <%= link_to "Back to Tickets", tickets_path, class: "btn btn-primary" %>
-    <%= link_to "Assign to me", assign_ticket_path(@ticket), data: {turbo_method: :patch}, class: "btn btn-primary text-light rounded shadow-sm" %>
   </div>
+
+  <%= link_to "Back to Tickets", tickets_path, class: "btn btn-primary mt-3 mb-3" %>
+  <%= link_to "Assign to me", assign_ticket_path(@ticket), data: {turbo_method: :patch}, class: "btn btn-primary text-light rounded shadow-sm" %>
 
   </div>
 </div>
