--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,8 +3,8 @@
 @import "avatar";
 @import "form_legend_clear";
 @import "login_form";
-@import "messages";
 @import "account_card";
 @import "wallet";
 @import "explorer";
-@import "vertical_navbar"
+@import "vertical_navbar";
+@import "ticket_chatroom"
