--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -31,6 +31,7 @@
         <th scope="col">Subject</th>
         <th scope="col">Requester</th>
         <th scope="col">Updated</th>
+         <th scope="col">Status</th>
         <th scope="col">Assignee</th>
         <th scope="col"><i class="fa-solid fa-user-plus"></i></th>
       </tr>
