--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,10 +2,11 @@
 @import "alert";
 @import "avatar";
 @import "form_legend_clear";
-@import "login_form";
+@import "form";
 @import "account_card";
 @import "wallet";
 @import "footer";
 @import "explorer";
 @import "vertical_navbar";
-@import "ticket_chatroom"
+@import "ticket_chatroom";
+@import "button";
