--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -11,8 +11,8 @@ $body-bg:                $white;
 $font-size-base:         1rem;
 
 // Colors
-$body-color: $gray;
-$primary:    $lightblue;
+$body-color: $black;
+$primary:    $verydarkblue;
 $success:    $green;
 $info:       $yellow;
 $danger:     $red;
