--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <%= render "shared/navbar", home: true %>
 
-<div class="home-container">
+<div class="container-fluid">
   <div class="row m-3 justify-content-center">
     <div class="col-12">
       <h1>Seamless Support for Web3</h1>
