--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -14,4 +14,5 @@ $verydarkblue: #0f1940;
 $darkblue: #282378;
 $lightblue: #412db0;
 $verylightblue: #5a37e9;
-$gray: rgb(250, 246, 246);
+$gray: rgb(190, 190, 190);
+$black: rgb(0, 0, 0);
