--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,11 @@
   </head>
 
   <body>
-    <div class= '<%="d-flex" if current_user %> ' >
+    <div class="<%= 'd-flex' if !current_page?(root_path) %>">
       <%= render "shared/flashes" %>
-      <%# <%= render 'shared/vertical_navbar', home: false %>
       <%= yield %>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <!-- Add the Popper.js library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
