--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -31,8 +31,9 @@
         <th scope="col">Subject</th>
         <th scope="col">Requester</th>
         <th scope="col">Updated</th>
+        <th scope="col">Status</th>
         <th scope="col">Assignee</th>
-        <th scope="col"><i class="fa-solid fa-user-plus"></i></th>
+
       </tr>
     </thead>
 
@@ -43,12 +44,12 @@
           <td><%= ticket.subject %></td>
           <td><%= ticket.client_email %></td>
           <td><%= ticket.updated_at %></td>
+          <td><%= ticket.status %></td>
           <% if ticket.user.present? %>
             <td><%= ticket.user.first_name.capitalize %> <%= ticket.user.last_name.capitalize %></td>
           <% else %>
             <td>Unassigned</td>
           <% end %>
-           <td onclick="event.stopPropagation()"><%= link_to "Assign to me" , assign_ticket_path(ticket),  class: "btn btn-primary text-light rounded shadow-sm"%></td>
       </tr>
     <% end %>
   </tbody>
